# project

./: README.md
.github/workflows/: python-app.yml
server/: .pre-commit-config.yaml  pyproject.toml
server/server/: try.py
server/xpand/: order_fulfiller.py
server/xpand/models/: __init__.py  item.py  order.py  robotic_arm_motion.py  slot.py
server/xpand/services/: __init__.py  inventory_db.py  robot.py
